# temp

./: .gitignore  1.cc  1.h  2.h  CMakeLists.txt  Makefile  README.md  add_two_numbers.cpp  add_two_numbers.h
Inheritance/Virtual_Inheritance/: basic.cc
Polymorphism/Hide/: basic.cc
Polymorphism/OverLoad/: 1.cc
Polymorphism/OverRide/: basic.cc  inline.cc  multiple_Inheritance.cc  test.cc
Privilege/: basic.cc
Qualifier/const/: 1.cc
Qualifier/static/: Local_Var.cc
